fix: navbar link text visible on hover when scrolled (#54938)

--- a/assets/scss/_k8s_nav.scss
+++ b/assets/scss/_k8s_nav.scss
@@ -66,8 +66,10 @@
   .navbar-nav .nav-link, #hamburger {
     color: $dark-grey;
 
+    &:hover,
+    &:focus,
     &:hover:focus {
-      color: $medium-grey;
+      color: $medium-grey !important;
     }
   }
 
